fixed problems with member menu items not showing

--- a/help-and-support/css/support.css
+++ b/help-and-support/css/support.css
@@ -110,7 +110,39 @@ margin: 0px;
 	width: 60%;
 	margin-left: 20%;
 	margin-right: 20%;
+	
+	
+}
+
+.search-results-header {
+	position: absolute;
+	top:10px;
+	width: 90%;
+	padding-left: 10%;
+	height:45px;
+	font-family: Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", "serif";
+	font-size: 2em;
+	
+	
+}
+
+.contributor-imagebox {
+	
+	width:100px;
+	height: 100px;
+	box-sizing: content-box;
+	position: absolute;
+	top:60px;
+	left: 10%;
 	background: red;
+	display: inline;
+	vertical-align: middle;
+}
+
+.search-results-header h2 {
+	margin: 0px;
+	font-family: Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", "serif";
+	font-size: 1em;
 	
 }
 
